--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.digitalstate.stix</groupId>
     <artifactId>stix</artifactId>
-    <version>v0.10.0</version>
+    <version>v0.10.0-NO-VALIDATION</version>
     <packaging>jar</packaging>
 
     <name>STIX 2</name>
